[build-system]
requires = [
  "setuptools>=65.3"
  ]
build-backend = "setuptools.build_meta"

[project]
name = "dblp_sax_parser"
version = "0.1"
authors = [
  { name="Leon", email="leonsunwl@gmail.com" },
]
description = "A parsing package for dblp using the Simple API for XML (SAX)"
readme = "README.md"
requires-python = ">=3.11.3"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "requests",
    "pandas >= 2.0.2",
    "hurry.filesize >= 0.09"
]

[project.urls]
"Homepage" = "https://github.com/leonswl/dblp-sax-parser"
"Bug Tracker" = "https://github.com/leonswl/dblp-sax-parser/issues"